--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,16 @@ ol{
     font-family: fantasy;
 
 }
+ul{
+    text-decoration: beige;
+    font-style: italic;
+    font-family: fantasy;
+}
+p {
+    border: 1px solid powderblue;
+    padding: 30px;
+    margin: 50px;
+  }
 
 
 
