--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,14 @@ ul{
 }
 p {
     border: 1px solid powderblue;
-    padding: 30px;
-    margin: 50px;
+    padding: 0px;
+    margin: 0px;
+  }
+  .about,.interests,.hobbies,.contacts{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: block;
   }
 
 
